--- a/CurveDentalManagement.API/CurveDentalManagement.API.csproj
+++ b/CurveDentalManagement.API/CurveDentalManagement.API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -31,9 +31,6 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Model\DTO\" />
-    <Folder Include="Model\Model\" />
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
