--- a/CurveDentalManagement.UI/package.json
+++ b/CurveDentalManagement.UI/package.json
@@ -20,6 +20,8 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
